config/samples/02-ingress-tls/service_ingress_gateway.yaml
apiVersion: v1
kind: Service
metadata:
  name: ingress-gateway
  namespace: tykpro-control-plane
  labels:
    name: tyk
  annotations:
    # https://www.digitalocean.com/docs/kubernetes/how-to/configure-load-balancers/
    service.beta.kubernetes.io/do-loadbalancer-name: "ingressdemo"
#    service.beta.kubernetes.io/do-loadbalancer-healthcheck-port: "80"
#    service.beta.kubernetes.io/do-loadbalancer-healthcheck-protocol: "http"
#    service.beta.kubernetes.io/do-loadbalancer-healthcheck-path: "/hello"
#    service.beta.kubernetes.io/do-loadbalancer-healthcheck-check-interval-seconds: "3"
#    service.beta.kubernetes.io/do-loadbalancer-healthcheck-response-timeout-seconds: "5"
#    service.beta.kubernetes.io/do-loadbalancer-healthcheck-unhealthy-threshold: "3"
#    service.beta.kubernetes.io/do-loadbalancer-healthcheck-healthy-threshold: "5"
#    service.beta.kubernetes.io/do-loadbalancer-enable-backend-keepalive: "true"
spec:
  ports:
    - name: http
      targetPort: 80
      port: 80
      protocol: TCP
    - name: https
      targetPort: 443
      port: 443
      protocol: TCP
  selector:
    name: tyk
  type: LoadBalancer
  externalTrafficPolicy: Local
